--- a/_sass/components/_syntax-highlighting.scss
+++ b/_sass/components/_syntax-highlighting.scss
@@ -7,8 +7,8 @@ pre, code {
   font-family: $font-family-monospace;
   color: #525252;
   font-size: 0.9em;
-  // background-color: #f8f8f8;
-  background-color: black;
+  background-color: #f8f8f8;
+  // background-color: black;
   font-size: ($font-size-base - 3);
 }
 code {
