--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -31,7 +31,8 @@
   }
   .author_name {
     display: block;
-    color: #F36170;
+    // color: #F36170;
+    color: rgb(255, 255, 255);
     font-size: 1.75em;
     text-transform: lowercase;
   }
