--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -34,14 +34,14 @@
     // color: #F36170;
     color: rgb(255, 255, 255);
     font-size: 1.75em;
-    text-transform: lowercase;
+    // text-transform: lowercase;
   }
   .author_job {
     display: block;
     color: $secondary;
     font-size: 0.8em;
     font-weight: 700;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     margin: -5px auto 10px;
   }
   .author_bio {
